# split_manga_pages

./: .gitignore  README.md  main.py  readme.md  requirements.txt  setup.cfg  split_manga_pages  split_manga_pages.py
src/split_manga_pages/: split_manga_pages.py  utils.py
