[metadata]
name = split_manga_pages
version = 0.1.1
author = Christoffer Aakre
author_email = christoffer.corfield@gmail.com
description = Split double page layout manga images into single page layout
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/christofferaakre/split_manga_pages
project_urls =
    Bug Tracker = https://github.com/christofferaakre/split_manga_pages/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
   split_manga_pages = split_manga_pages.split_manga_pages:main
